# Canvas

./: .gitignore  1.mjs  2.mjs  AGENTS.md  Cargo.toml  README.md  architecture.scaffolds.json  biome.json  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  refactor.mjs  rust-toolchain.toml  tsconfig.base.json  turbo.json
.canvas-ui-phase-2a-backup/: manifest.json  package.json
.canvas-ui-phase-2b-backup/: manifest.json
.canvas-ui-refactor-backup/: manifest.json
.github/workflows/: quality.yml
.hardening-backup/2026-07-23T05-00-02-024Z/: Cargo.toml  package.json
.inspector-architecture-backup/: README.txt  workspaceContainer.backup  workspaceShell.backup
.refactor-backup/phase-01-1784457012638/: package.json
.ui-refactor-backup/: manifest.json
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.css  css.d.ts  main.tsx  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main-window.json  recovery-window.json  settings-window.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/permissions/: asset.json  clipboard.json  dialog.json  file.json  opener.json  plugin.json  settings.json  window.json
apps/desktop/src-tauri/src/: asset_protocol.rs  error.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/bootstrap/: app.rs  logging.rs
apps/desktop/src-tauri/src/commands/: asset.rs  diagnostics.rs  document.rs  file.rs  mod.rs  opener.rs  plugin.rs  settings.rs  window.rs
apps/desktop/src-tauri/src/diagnostics/: mod.rs
apps/desktop/src-tauri/src/ipc/: export_bindings.rs  mod.rs
apps/desktop/src-tauri/src/ipc/contracts/: mod.rs
apps/desktop/src-tauri/src/security/: approved_paths.rs  mod.rs
apps/desktop/vite-plugins/: custom-error-diagnostics.ts
docs/: README.md
docs/adr/: ADR-001-tldraw-license.md  ADR-002-document-lifecycle-boundary.md  ADR-003-opaque-window-surface.md  ADR-004-document-session-persistence-boundary.md  ADR-005-unified-fatal-incident.md  README.md
docs/architecture/: README.md  refactor-progress.md  rust-layers.md  scaffold-policy.md  window-lifecycle.md
docs/compatibility/: README.md
docs/domain-map/: README.md
docs/rfcs/: README.md  tool-inspector-refactor.md
docs/runbooks/: README.md
domains/asset/: package.json  tsconfig.json
domains/asset/native/: Cargo.toml
domains/canvas/: package.json  tsconfig.json
domains/canvas/scripts/: check-license.js
domains/canvas/src/: public-api.ts
domains/collaboration/: package.json  tsconfig.json
domains/collaboration/src/: public-api.ts
domains/document/: package.json  tsconfig.json
domains/document/src/: public-api.ts
domains/file/: package.json  tsconfig.json
domains/file/native/: Cargo.toml  README.md
domains/file/src/: public-api.ts
domains/flowchart/: package.json  tsconfig.json
domains/flowchart/src/: public-api.ts
domains/freehand/: package.json  tsconfig.json
domains/freehand/src/: public-api.ts
domains/import-export/: package.json  tsconfig.json
domains/plugin/: package.json  tsconfig.json
domains/plugin/native/: Cargo.toml  README.md
domains/plugin/src/: public-api.ts
domains/scientific-plot/: package.json  tsconfig.json
domains/settings/: package.json  tsconfig.json
domains/settings/src/: public-api.ts
domains/workspace/: package.json  tsconfig.json
domains/workspace/src/: public-api.ts
editor/assets/: package.json  tsconfig.json
editor/assets/native/: Cargo.toml  README.md
editor/assets/src/: public-api.ts
editor/core/: package.json  tsconfig.json
editor/core/scripts/: check-license.js
editor/core/src/: extensions-public-api.ts  public-api.ts
editor/document/: package.json  tsconfig.json
editor/extensions/: package.json  tsconfig.json
editor/persistence/: package.json  tsconfig.json
editor/persistence/native/: Cargo.toml
editor/persistence/native/src/: atomic_write.rs  document_codec.rs  document_codec_v2.rs  draw_document_codec.rs  error.rs  legacy_document_codec_v1.rs  lib.rs  lock.rs  recovery.rs  revision.rs
features/canvas-session/: package.json  tsconfig.json
features/flowchart/: package.json  tsconfig.json
features/freehand/: package.json  tsconfig.json
features/import-export/: package.json  tsconfig.json
features/scientific-plot/: package.json  tsconfig.json
features/settings/: package.json  tsconfig.json
features/workspace/: package.json  tsconfig.json
foundations/design-system/: components.json  package.json  tsconfig.json
foundations/geometry/: package.json  tsconfig.json
foundations/kernel/: package.json  tsconfig.json
foundations/observability/: package.json  tsconfig.json
foundations/serialization/: package.json  tsconfig.json
foundations/test-kit/: package.json  tsconfig.json
scripts/quality/: README.md  assert-no-legacy-persistence.mjs  run.mjs
tests/: README.md  package.json  tsconfig.json
tests/architecture/: README.md  check-canvas-lifecycle.mjs  check-diagnostic-observability.mjs  check-fatal-contract-tests.mjs  check-fatal-error-architecture.mjs  check-fatal-state-machine.mjs  check-icon-library.mjs  check-import-graph.mjs  check-inspector-ownership.mjs  check-ipc-bindings.mjs  check-native-crash-recovery.mjs  check-properties-inspector-architecture.mjs  check-rust-async-boundaries.mjs  check-rust-logging.mjs  check-termination-ux.mjs  check-transform-status-architecture.mjs  check-ui-architecture.mjs  check-ui-dialogs.mjs  check-window-dragging.mjs  check-window-surface.mjs  check.mjs
tests/cross-domain-contract/: README.md  package.json  tsconfig.json
tests/desktop-e2e/: README.md  release-checklist.md
tests/performance/: README.md  bundle-baseline.json  check-bundle-budget.mjs  report-bundle.mjs
tests/release/: README.md
tests/security/: README.md
tooling/: README.md
tooling/benchmarks/: README.md
tooling/config/: README.md
tooling/dependency-rules/: README.md
tooling/generators/: README.md
tooling/release/: README.md
tooling/script/: 1.mjs  recover-refactor-scripts.mjs  refactor.mjs
(+296 files in other folders)
