[workspace]
resolver = "3"
members = [
  "apps/desktop/src-tauri",
  "editor/assets/native",
  "editor/persistence/native",
  "editor/extensions/native",
  "platforms/desktop-runtime/native",
]
default-members = [
  "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Hybrid Canvas Contributors"]
license = "Proprietary"
repository = "https://example.invalid/hybrid-canvas"
publish = false

[workspace.dependencies]
# Error handling
anyhow = "1.0.98"
log = "0.4.27"
thiserror = "2.0.12"

# Async runtime
async-trait = "0.1.88"
futures = "0.3.31"
tokio = { version = "1.45.1", features = [
  "fs", "io-util", "macros", "process",
  "rt-multi-thread", "signal", "sync", "time",
] }
tokio-util = { version = "0.7.15", features = ["rt"] }

# Serialization and validation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
toml = "0.8.23"
url = { version = "2.5.4", features = ["serde"] }

# Stable identifiers and time
time = { version = "0.3.41", features = [
  "formatting", "macros", "parsing", "serde",
] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

# File, archive and content-addressed storage
blake3 = "1.8.2"
hex = "0.4.3"
sha2 = "0.10.9"
tempfile = "3.20.0"
walkdir = "2.5.0"
zip = { version = "4.0.0", default-features = false, features = [
  "deflate", "time", "zstd",
] }
zstd = "0.13.3"

# Native file locking and watching
fs2 = "0.4.3"
notify = "8.0.0"

# Plugin signature and integrity verification
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = [
  "pkcs8", "rand_core", "serde",
] }
rand = "0.9.1"
subtle = "2.6.1"
zeroize = { version = "1.8.1", features = ["derive"] }

# Observability
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter", "fmt", "json", "registry",
] }

# Tauri composition root
tauri = { version = "2.5.1", features = [] }
tauri-build = { version = "2.2.0", features = [] }
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-log = "2.4.0"
tauri-plugin-opener = "2.3.0"
tauri-plugin-os = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-updater = "2.3.0"
tauri-plugin-window-state = "2.3.0"

# IPC contract generation.
#
# These prerelease versions are deliberately pinned as a compatible set.
# Do not upgrade one of them independently.
specta = { version = "=2.0.0-rc.22", features = [
  "derive",
  "function",
  "serde",
  "serde_json",
  "uuid",
] }

specta-typescript = "=0.0.9"

tauri-specta = { version = "=2.0.0-rc.21", features = [
  "derive",
  "typescript",
] }

# Testing
proptest = "1.7.0"
rstest = "0.25.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_lifetimes = "deny"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
allow_attributes_without_reason = "warn"
as_conversions = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "deny"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
exit = "deny"
expect_used = "warn"
filetype_is_file = "warn"
get_unwrap = "warn"
indexing_slicing = "warn"
large_futures = "warn"
lossy_float_literal = "warn"
mem_forget = "deny"
multiple_inherent_impl = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
str_to_string = "warn"
string_add = "warn"
string_slice = "warn"
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"

# Relaxed
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"

[profile.dev]
debug = 1
incremental = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[profile.test]
debug = 1
incremental = true
opt-level = 1

[profile.release]
codegen-units = 1
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true
lto = "thin"
