[package]
name = "hybrid-canvas-file-native"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true

[dependencies]
serde_json.workspace = true
tempfile.workspace = true
hex.workspace = true
sha2.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
  "Win32_Storage_FileSystem",
] }
